fixed notes alignment

--- a/src/components/Doctor Module/doctor.css
+++ b/src/components/Doctor Module/doctor.css
@@ -3250,7 +3250,7 @@ button.reset-btn {
 
 /* MY PATIENTS PAGE */
 .diagnosis-description {
-  max-height: 190px;
+  max-height: 150px;
   overflow-y: scroll;
 }
 
